--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
     <main>
         <div class="showcase">
             <h1 class="showcase_title"><span>If you lost your sight,</span> what moment would you see again?</h1>
-            <span class="showcase_blindfold">
-                <span class="marked-text">I’d see my son</span>
-            </span>
-            <picture class="showcase_image">
-                <source srcset="src/img/showcase-mobile.webp" media="(max-width: 768px)">
-                <img src="src/img/showcase.webp" alt="" class="showcase_image">
-            </picture>
+            <video class="showcase_video" src="video.mp4" loop muted autoplay poster="src/img/showcase.webp">
+            </video>
         </div>
 
         <div class="content">
