--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
 
         <div class="content">
+            <div class="intro">
+                <h2 class="intro_title">Losing your sight is emotionally traumatic and isolating.</h2>
+                <div class="intro_text">
+                    <p>We are Orbis: a charity that brings people together to fight avoidable blindness – and we are collecting memories of what people in the UK would want to see again if they lost their sight. We are sharing these memories on a public website for others to read, and to bring us closer together and better understand the impact vision loss can have on children and adults in low income-countries.</p>
+                </div>
+                <a href="#form" class="button">share your memory</a>
+            </div>
+
             <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and 295 million people living with moderate-to-severe sight loss.
                 3 out of 4 of these people are completely treatable.</h2>
             <span class="marked-text">What is ‘I’d see’?</span>
@@ -72,13 +80,6 @@
                             <img class="person_image" src="src/img/slider-6.webp" alt="">
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="memories">
-                <p>Losing your sight is emotionally traumatic and isolating. We are collecting these memories to share on a public website for others to read, to bring us closer together and better understand the impact vision loss can have on children and adults in low-income countries. </p>
-                <div class="memories_button">
-                    <a href="#form" class="button">share your memory</a>
                 </div>
             </div>
 
