--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class="showcase">
             <h1 class="showcase_title"><span>If you lost your sight,</span> what moment would you see again?</h1>
-            <video class="showcase_video" src="video.mp4" loop muted autoplay poster="src/img/showcase.webp">
+            <video class="showcase_video" src="video.mp4" loop muted autoplay playsinline poster="src/img/showcase.webp">
             </video>
         </div>
 
