--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="form_row">
                     <label for="moment">could you describe that moment to us?</label>
-                    <input type="text" id="moment" placeholder="Type here a description of that moment|">
+                    <textarea type="text" id="moment" placeholder="Type here a description of that moment|"></textarea>
                 </div>
                 <div class="form_row">
                     <label for="name">first name</label>
