--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a href="#form" class="button">share your memory</a>
             </div>
 
-            <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and 295 million people living with moderate-to-severe sight loss.
-                3 out of 4 of these people are completely treatable.</h2>
+            <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and <span class="bright-text">295 million</span> people living with moderate-to-severe sight loss.
+                <span class="bright-text">3 out of 4 of these people are completely treatable.</span></h2>
             <span class="marked-text">What is ‘I’d see’?</span>
 
             <div class="about">
