--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         <div class="footer_holder">
             <div class="footer_info">
                 <div class="footer_menu">
-                    <a href="#" class="footer_menu-link">Privacy policy</a>
-                    <a href="#" class="footer_menu-link">terms & conditions</a>
+                    <a href="https://gbr.orbis.org/en/privacy-policy" class="footer_menu-link">Privacy policy</a>
+                    <a href="https://gbr.orbis.org/en/website-terms-conditions" class="footer_menu-link">terms & conditions</a>
                 </div>
                 <div class="footer_copyrights">
                     <p>Orbis UK (Orbis Charitable Trust) is an affiliate of Orbis International .Registered charity number 1061352, company number 3303689</p>
