--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <main>
         <div class="showcase">
-            <h1 class="showcase_title"><span>If you lost your sight,</span> what moment would you see again?</h1>
+            <h1 class="showcase_title js-random-text"><span>If you lost your sight,</span> what moment would you see again?</h1>
+            <h1 class="showcase_title js-random-text" style="display: none;"><span>If you were going blind tomorrow,</span> what is the final image you’d want to see?</h1>
+            <h1 class="showcase_title js-random-text" style="display: none;"><span>If you went blind for 3 years,</span> what’s the first thing you’d want to see?</h1>
             <video class="showcase_video" src="video.mp4" loop muted autoplay playsinline poster="src/img/showcase.webp">
             </video>
         </div>
@@ -105,11 +107,23 @@
             </div>
 
             <form action="" class="form" id="form">
-                <h3 class="form_title">
+                <h3 class="form_title js-random-text">
                     <div>
                         <span>If <span>you lost</span><span> your</span><span> sight,</span></span>
                     </div>
                     <span><span>what </span><span>moment</span> <span>would </span><span>you </span><span>see </span><span>again?</span></span>
+                </h3>
+                <h3 class="form_title js-random-text" style="display: none;">
+                    <div>
+                        <span>If <span>you were</span><span> going</span><span> blind</span><span> tomorrow,</span></span>
+                    </div>
+                    <span><span>what is </span><span> the final</span> <span>image </span><span>image </span><span>want </span><span>to see?</span></span>
+                </h3>
+                <h3 class="form_title js-random-text" style="display: none;">
+                    <div>
+                        <span>If <span>you went</span><span> blind </span><span> for</span><span> 3 years,</span></span>
+                    </div>
+                    <span><span>what’s </span><span>the first</span> <span>thing </span><span>you’d </span><span>want </span><span>to see?</span></span>
                 </h3>
                 <div class="form_row">
                     <label for="want">i’d see...</label>
@@ -133,7 +147,7 @@
                 </div>
                 <div class="form_row">
                     <input type="checkbox" id="recieve">
-                    <label for="recieve">Tick this box if you would like to receive email communications and updates about our work. We will use your data in accordance with our Privacy Policy</label>
+                    <label for="recieve">Tick this box if you would like to receive email communications and updates about our work. We will use your data in accordance with our <a href="https://gbr.orbis.org/en/privacy-policy" target="__blank">Privacy Policy</a></label>
                 </div>
                 <div class="form_row">
                     <input type="submit" value="SUBMIT">
@@ -147,8 +161,8 @@
         <div class="footer_holder">
             <div class="footer_info">
                 <div class="footer_menu">
-                    <a href="https://gbr.orbis.org/en/privacy-policy" class="footer_menu-link">Privacy policy</a>
-                    <a href="https://gbr.orbis.org/en/website-terms-conditions" class="footer_menu-link">terms & conditions</a>
+                    <a href="https://gbr.orbis.org/en/privacy-policy" target="__blank" class="footer_menu-link">Privacy policy</a>
+                    <a href="https://gbr.orbis.org/en/website-terms-conditions" target="__blank" class="footer_menu-link">terms & conditions</a>
                 </div>
                 <div class="footer_copyrights">
                     <p>Orbis UK (Orbis Charitable Trust) is an affiliate of Orbis International .Registered charity number 1061352, company number 3303689</p>
@@ -159,25 +173,8 @@
         </div>
     </footer>
 
-    <div class="fade"></div>
-    <div class="fade fade__mobile"></div>
-
-
     <script src="./src/js/swiper.min.js"></script>
     <script src="./src/js/main.js"></script>
-
-    <script>
-        (function () {
-            var s = document.createElement("script"),
-                e = !document.body ? document.querySelector("head") : document.body;
-            s.src = "https://acsbapp.com/apps/app/dist/js/app.js";
-            s.async = true;
-            s.onload = function () {
-                acsbJS.init({ statementLink: "", footerHtml: "", hideMobile: false, hideTrigger: false, language: "en", position: "left", leadColor: "#146ff8", triggerColor: "#146ff8", triggerRadius: "50%", triggerPositionX: "right", triggerPositionY: "bottom", triggerIcon: "people", triggerSize: "medium", triggerOffsetX: 20, triggerOffsetY: 20, mobile: { triggerSize: "small", triggerPositionX: "right", triggerPositionY: "bottom", triggerOffsetX: 10, triggerOffsetY: 10, triggerRadius: "50%" } });
-            };
-            e.appendChild(s);
-        })();
-    </script>
 
 </body>
 </html>
