--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <h2>Globally, there are <span class="bright-text">43 million</span> people living with blindness and <span class="bright-text">295 million</span> people living with moderate-to-severe sight loss.
-                <span class="bright-text">3 out of 4 of these people are completely treatable.</span></h2>
+                <span class="bright-text">3 out of 4 cases of blindness are completely treatable.</span></h2>
             <span class="marked-text">What is ‘I’d see’?</span>
 
             <div class="about">
@@ -119,7 +119,7 @@
                     <div>
                         <span>If <span>you were</span><span> going</span><span> blind</span><span> tomorrow,</span></span>
                     </div>
-                    <span><span>what is </span><span> the final</span> <span>image </span><span>image </span><span>want </span><span>to see?</span></span>
+                    <span><span>what is </span><span> the final</span> <span>image </span><span>want </span><span>to see?</span></span>
                 </h3>
                 <h3 class="form_title js-random-text" style="display: none;">
                     <div>
@@ -129,29 +129,34 @@
                 </h3>
                 <h3 class="form_title form_title__success" style="display: none;">
                     <div>
-                        <span>Thamk you <span>for</span><span> submitting</span></span>
+                        <span>Thank you <span>for</span><span> submitting</span></span>
                     </div>
                     <span><span>your </span><span>memory.</span></span>
                 </h3>
                 <div class="form_row">
                     <label for="want">i’d see...</label>
                     <input type="text" id="want" name="IDSEE" placeholder="Type here what you would see|" required>
+                    <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <label for="moment">could you describe that moment to us?</label>
                     <textarea type="text" id="moment" name="IDSEEDESC" placeholder="Type here a description of that moment|"></textarea>
+                    <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <label for="name">first name</label>
                     <input type="text" id="name" name="FIRSTNAME" placeholder="Enter your first name|" required>
+                    <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <label for="surname">second name</label>
                     <input type="text" id="surname" name="LASTNAME" placeholder="Enter your second name|" required>
+                    <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <label for="mail">email address</label>
                     <input type="email" id="mail" name="email" placeholder="Enter your email address" required>
+                    <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
                     <input type="checkbox" id="recieve" name="IDSEEOPTIN">
@@ -164,7 +169,7 @@
                     <div class="social">
                         <span class="social_title">share this page</span>
                         <div class="social_links">
-                            <div class="addthis_inline_share_toolbox_ztvi"></div>
+                            <div class="addthis_inline_share_toolbox"></div> 
                         </div>
                         <div class="social_copy">
                             <span class="social_copy-title">Or share with link</span>
@@ -185,7 +190,7 @@
                     <a href="https://gbr.orbis.org/en/website-terms-conditions" target="__blank" class="footer_menu-link">terms & conditions</a>
                 </div>
                 <div class="footer_copyrights">
-                    <p>Orbis UK (Orbis Charitable Trust) is an affiliate of Orbis International .Registered charity number 1061352, company number 3303689</p>
+                    <p>Orbis UK (Orbis Charitable Trust) is an affiliate of Orbis International. Registered charity number 1061352, company number 3303689</p>
                     <p>6th Floor, 10 Lower Thames Street, London EC3R 6AF</p>
                 </div>
             </div>
@@ -196,6 +201,6 @@
     <script src="./src/js/swiper.min.js"></script>
     <script src="./src/js/main.js"></script>
 
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5642faf671d1921e"></script> 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6142409eb2f29e37"></script> 
 </body>
 </html>
