--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="intro">
                 <h2 class="intro_title">Losing your sight is emotionally traumatic and isolating.</h2>
                 <div class="intro_text">
-                    <p>We are Orbis: a charity that brings people together to fight avoidable blindness – and we are collecting memories of what people in the UK would want to see again if they lost their sight. We are sharing these memories on a public website for others to read, to bring us closer together and better understand the impact vision loss can have on children and adults in low income-countries.</p>
+                    <p>We are Orbis: a charity that brings people together to fight avoidable blindness – and we are collecting memories of what people in the UK would want to see again if they lost their sight. We are sharing these memories on a public website for others to read, bring us closer together and better understand the impact vision loss can have on children and adults in low income-countries.</p>
                 </div>
                 <a href="#form" class="button">share your memory</a>
             </div>
