--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </div>
                         <div class="social_copy">
                             <span class="social_copy-title">Or share with link</span>
-                            <button class="social_copy-button js-copy-button">https://www.orbis.co.uk...</button>
+                            <button class="social_copy-button js-copy-button">https://orbis.org/idsee</button>
                         </div>
                     </div>
                 </div>
