--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
             <form action="https://orbis-updates.org/signup.ashx" method="POST" class="form">
                 <h3 class="form_title js-random-text">
                     <div>
-                        <span>If <span>you lost</span><span> your</span><span> sight,</span></span>
+                        <span><span>If you</span><span> lost</span><span> your</span><span> sight,</span></span>
                     </div>
                     <span><span>what </span><span>moment</span> <span>would </span><span>you </span><span>see </span><span>again?</span></span>
                 </h3>
                 <h3 class="form_title js-random-text" style="display: none;">
                     <div>
-                        <span>If you <span>were</span><span> going</span><span> blind</span><span> tomorrow,</span></span>
+                        <span><span>If you </span><span>were</span><span> going</span><span> blind</span><span> tomorrow,</span></span>
                     </div>
                     <span><span>what is </span><span> the final</span> <span>image </span><span>want </span><span>to see?</span></span>
                 </h3>
                 <h3 class="form_title js-random-text" style="display: none;">
                     <div>
-                        <span>If <span>you went</span><span> blind </span><span> for</span><span> 3 years,</span></span>
+                        <span><span>If you</span><span> went</span><span> blind </span><span> for</span><span> 3 years,</span></span>
                     </div>
                     <span><span>what’s </span><span>the first</span> <span>thing </span><span>you’d </span><span>want </span><span>to see?</span></span>
                 </h3>
                 <h3 class="form_title form_title__success" style="display: none;">
                     <div>
-                        <span>Thank you <span>for</span><span> submitting</span></span>
+                        <span><span>Thank you </span><span>for</span><span> submitting</span></span>
                     </div>
                     <span><span>your </span><span>memory.</span></span>
                 </h3>
