--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div>
                         <span><span>If</span> <span>you</span> <span>were</span> <span>going</span> <span>blind</span> <span>tomorrow,</span></span>
                     </div>
-                    <span><span>what is</span> <span>the final</span> <span>image</span> <span>want</span> <span>to see?</span></span>
+                    <span><span>what is</span> <span>the final</span> <span>image</span> <span>you’d</span> <span>want</span> <span>to see?</span></span>
                 </h3>
                 <h3 class="form_title js-random-text" style="display: none;">
                     <div>
