--- a/index.html
+++ b/index.html
@@ -159,11 +159,15 @@
                     <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
-                    <input type="checkbox" id="recieve" name="IDSEEOPTIN">
+                    <input type="checkbox" id="recieve" name="IDSEEOPTIN" value="YES">
                     <label for="recieve">Tick this box if you would like to receive email communications and updates about our work. We will use your data in accordance with our <a href="https://gbr.orbis.org/en/privacy-policy" target="__blank">Privacy Policy</a></label>
                 </div>
                 <div class="form_row">
-                    <input type="submit" value="SUBMIT">
+                    <input type="hidden" name="userid" value="27593">
+                    <input type="hidden" name="SIG8d84b17650384ca190ee32335eab25c87bd17a81072830bd88f0b174aa21ccf7" value="">
+                    <input type="hidden" name="addressbookid" value="70042828" />
+                    <input type="hidden" name="ReturnURL" value="https://gbr.orbis.org/en/thank-you-for-signing-up">
+                    <input type="hidden" id="ci_consenturl" name="ci_consenturl" value="">
                 </div>
                 <div class="form_success">
                     <div class="social">
