--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <span class="form_error">this is a required field</span>
                 </div>
                 <div class="form_row">
-                    <input type="checkbox" id="recieve" name="IDSEEOPTIN" value="YES">
+                    <input type="checkbox" id="recieve" name="IDSEEOPTIN">
                     <label for="recieve">Tick this box if you would like to receive email communications and updates about our work. We will use your data in accordance with our <a href="https://gbr.orbis.org/en/privacy-policy" target="__blank">Privacy Policy</a></label>
                 </div>
                 <div class="form_row">
@@ -168,6 +168,7 @@
                     <input type="hidden" name="addressbookid" value="70042828" />
                     <input type="hidden" name="ReturnURL" value="https://gbr.orbis.org/en/thank-you-for-signing-up">
                     <input type="hidden" id="ci_consenturl" name="ci_consenturl" value="">
+                    <input type="submit" value="SUBMIT" >
                 </div>
                 <div class="form_success">
                     <div class="social">
