feat: add updated image and video assets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="showcase_title js-random-text"><span>If you lost your sight,</span> what moment would you want to see again?</h1>
             <h1 class="showcase_title js-random-text" style="display: none;"><span>If you were going blind tomorrow,</span> what is the final image you’d want to see?</h1>
             <h1 class="showcase_title js-random-text" style="display: none;"><span>If you went blind for 3 years,</span> what’s the first thing you’d want to see?</h1>
-            <video class="showcase_video" src="video.mp4" loop muted autoplay playsinline poster="src/img/showcase.webp">
+            <video class="showcase_video" src="src/video/hero-video.mp4" loop muted autoplay playsinline poster="src/img/hero-video-cover.jpg">
             </video>
         </div>
 
@@ -55,32 +55,32 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-1.webp" alt="">
+                            <img class="person_image" src="src/img/slider-1.jpg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-2.webp" alt="">
+                            <img class="person_image" src="src/img/slider-2.jpg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-3.webp" alt="">
+                            <img class="person_image" src="src/img/slider-3.jpg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-4.webp" alt="">
+                            <img class="person_image" src="src/img/slider-4.jpg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-5.webp" alt="">
+                            <img class="person_image" src="src/img/slider-5.jpg" alt="">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="person">
-                            <img class="person_image" src="src/img/slider-6.webp" alt="">
+                            <img class="person_image" src="src/img/slider-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
