--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     <input type="hidden" id="ci_consenturl" name="ci_consenturl" value="">
                     <input type="submit" value="SUBMIT" >
                 </div>
+                <id id="thankyou"></id>
                 <div class="form_success">
                     <div class="social">
                         <span class="social_title">share this page</span>
