--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <input type="hidden" name="userid" value="27593">
                     <input type="hidden" name="SIG8d84b17650384ca190ee32335eab25c87bd17a81072830bd88f0b174aa21ccf7" value="">
                     <input type="hidden" name="addressbookid" value="70042828" />
-                    <input type="hidden" name="ReturnURL" value="https://gbr.orbis.org/en/thank-you-for-signing-up">
+                    <input type="hidden" name="ReturnURL" value="https://you-got-it.github.io/orbis_lp/index.html#thankyou">
                     <input type="hidden" id="ci_consenturl" name="ci_consenturl" value="">
                     <input type="submit" value="SUBMIT" >
                 </div>
