feat: mask top edge of showcase video

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             <h1 class="showcase_title js-random-text"><span>If you lost your sight,</span> what moment would you want to see again?</h1>
             <h1 class="showcase_title js-random-text" style="display: none;"><span>If you were going blind tomorrow,</span> what is the final image you’d want to see?</h1>
             <h1 class="showcase_title js-random-text" style="display: none;"><span>If you went blind for 3 years,</span> what’s the first thing you’d want to see?</h1>
+            <div style="
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 255px;
+                width: 100%;
+                background-image: linear-gradient(180deg, #0C1F2F 60%, transparent);
+            "></div>
             <video class="showcase_video" src="src/video/hero-video.mp4" loop muted autoplay playsinline poster="src/img/hero-video-cover.jpg">
             </video>
         </div>
